--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  --color-background: #FAF9F6;
+  --color-foreground: #000000;
+  --color-foreground-dim: darkgray;
+
+  /* margin: 0; */
+  font-size: calc(10px + 2vmin);
+  background-color: var(--color-background);
+  color: var(--color-foreground);
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  color: var(--color-foreground);
+  text-decoration: underline;
+}
+
+.container {
+  width: 100%;
+}
+
+.content {
+  margin: 0 auto;
+  width: 1000px;
+  max-width: calc(100% - 20px);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+
+.title {
+  font-size: 2em;
+  font-weight: 800;
+}
+
+.subtitle {
+  font-size: 0.75em;
+  margin-top: -50px;
+  color: var(--color-foreground-dim);
 }
